--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>apal</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+helo
 </body>
 </html>
